crates/nash-config/src/snapshots/nash_config__parse__build_tests__build_roundtrip-5.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"traceLevel\":\"verbose\",\"compilerTraces\":false}"
---
{
  "type": "application",
  "traceLevel": "verbose",
  "compilerTraces": false,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
