crates/nash-config/src/snapshots/nash_config__parse__build_tests__build_roundtrip-7.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"plutusVersion\":\"v2\",\"traceLevel\":\"silent\",\"compilerTraces\":false}"
---
{
  "type": "application",
  "plutusVersion": "v2",
  "traceLevel": "silent",
  "compilerTraces": false,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
