crates/nash-config/src/snapshots/nash_config__parse__build_tests__build_roundtrip-9.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"plutusVersion\":\"v2\",\"traceLevel\":\"compact\",\"compilerTraces\":false}"
---
{
  "type": "application",
  "plutusVersion": "v2",
  "traceLevel": "compact",
  "compilerTraces": false,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
