crates/nash-config/src/snapshots/nash_config__parse__build_tests__build_roundtrip.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"traceLevel\":\"silent\",\"compilerTraces\":false}"
---
{
  "type": "application",
  "traceLevel": "silent",
  "compilerTraces": false,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
