crates/nash-config/src/snapshots/nash_config__parse__build_tests__compiler_traces_wrong_type.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"compilerTraces\":\"true\"}"
info: diagnostic
---
  × 'nash.jsonc' at 1:40: expected a boolean
