crates/nash-config/src/snapshots/nash_config__parse__build_tests__invalid_optimizer.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"optimize\":2}"
info: diagnostic
---
  × 'nash.jsonc' at 1:34: 'optimize' must be the integer 0 or 1
