crates/nash-config/src/snapshots/nash_config__parse__build_tests__invalid_trace_level.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"traceLevel\":\"loud\"}"
info: diagnostic
---
  × 'nash.jsonc' at 1:36: invalid value 'loud' for 'traceLevel' (expected
  │ 'silent', 'compact', or 'verbose')
