crates/nash-config/src/snapshots/nash_config__parse__build_tests__o2_compiler_traces.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"optimize\":2,\"compilerTraces\":true}"
info: diagnostic
---
  × 'nash.jsonc' at 1:34: O2 does not support compiler traces
